# MusicPlayer

./: gradle.properties  local.properties
app/: CMakeLists.txt  build.gradle
app/Superpowered/: SuperpoweredAdvancedAudioPlayer.h
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioEngin.cpp  PlayerExample.cpp  PlayerListManager.cpp
app/src/main/java/com/superpowered/playerexample/: AudioEnginBridge.java  FineLocalSongs.java  MainActivity.java  MainPlayerFragment.java  MyPagerAdapter.java  MyViewHolder.java  NowPlayingFragment.java  PlayListManager.java  Play_List_Fragment.java  Play_fragment.java  PlayerListManager.java  PlaylistAdapter.java  PlaylistData.java  Raw_audio_tracks.java  Recycle_adapter.java  Recycler_fragment.java  SongAdapter.java  SongData.java  SongListFragment.java  SongsFragment.java  audio_data.java  database.java  db_Viewer.java  playnext calling .txt  screen plan
app/src/main/res/drawable/: rounded_corners.xml
app/src/main/res/drawable-anydpi/: ic_action_nvaigation.xml
app/src/main/res/layout/: activity_main.xml  album_holder.xml  fragment_main_player.xml  fragment_now_playing.xml  fragment_play__list_.xml  fragment_play_fragment.xml  fragment_recycler_fragment.xml  fragment_song_list.xml  fragment_songs.xml  main_music_controls.xml  playlist_holder.xml  songlist_holder.xml  storagage_permission_popup.xml  track_holder.xml
app/src/main/res/values/: strings.xml  styles.xml
